--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">  
     <title>Flickr Browsr</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
-	
-  </head>
+</head>
 <body>
 	<div id="header">
 	<div class="logo">Flickr Browsr</div>
@@ -24,7 +24,7 @@
 	<span id="statusbar"></span>
 	
 	<div id="footer">
-		<p>Designed by <a href="http://arrowconcept.com">Arrowconcept.com</a>. Flickr is a registered trademark of Yahoo Inc.</p>
+		<p>Designed by <a href="http://arrowconcept.com">Arrowconcept.com</a>. Powered by <a href="http://isotope.metafizzy.co/">Isotope</a>, <a href="http://www.shadowbox-js.com/">Shadowbox</a>. Flickr is a registered trademark of Yahoo Inc.</p>
 	</div>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
