Adding more features.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
 		<input type="radio" name="stype" id="tsearch" value="search" checked="checked" /><label for="tsearch" id="lsearch" class="active" title="Search">&nbsp;</label>
 		<span class="separator">&middot;</span>
 		<input type="radio" name="stype" id="tuser" value="user" /><label for="tuser" id="luser" title="Screen name or NSID">&nbsp;</label>
+		<span class="separator">&middot;</span>
+		<input type="radio" name="stype" id="tgallery" value="gallery" /><label for="tgallery" id="lgallery" title="Gallery ID from URL">&nbsp;</label>
+		<span class="separator">&middot;</span>
+		<input type="radio" name="stype" id="tphotoset" value="photoset" /><label for="tphotoset" id="lphotoset" title="Photoset ID">&nbsp;</label>
+		<span class="separator">&middot;</span>
+		<input type="radio" name="stype" id="tgroups" value="groups" /><label for="tgroups" id="lgroups" title="Group name from URL">&nbsp;</label>
 		<input type="text" name="q" id="searchbox" class="textbox" />
 		<span class="inputhint">Search</span>
 		<span class="searchtip"><span class="arrowtip"></span>Search for photos or click the user icon to browse by Screen name/ NSID</span>	
 	</form>
+	<div id="userinfo"></div>
 	<div class="clearfix"></div>
 	</div>
 	<div id="container"></div>
