Added sets, galleries, contacts, etc

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 	<div id="header">
 	<div class="logo">Flickr Browsr</div>
 	<form id="searchform" onSubmit="return false;">
-		<input type="radio" name="stype" id="tsearch" value="search" checked="checked" /><label for="tsearch" id="lsearch" class="active" title="Search">&nbsp;</label>
+		<select name="stype1" class="typeselect" id="selecttype">
+			<option value="search" title="Search">Search</option>
+			<option value="user" title="Screen name or NSID">User</option>
+			<option value="favorites" title="Screen name or NSID of user">Favorites</option>
+			<option value="gallery" title="Gallery URL">Gallery</option>
+			<option value="group" title="Groups URL">Group</option>
+			<option value="photoset" title="Photoset ID">Photoset</option>
+		</select>
+		<!--<input type="radio" name="stype" id="tsearch" value="search" checked="checked" /><label for="tsearch" id="lsearch" class="active" title="Search">&nbsp;</label>
 		<span class="separator">&middot;</span>
 		<input type="radio" name="stype" id="tuser" value="user" /><label for="tuser" id="luser" title="Screen name or NSID">&nbsp;</label>
 		<span class="separator">&middot;</span>
@@ -19,6 +27,8 @@
 		<input type="radio" name="stype" id="tphotoset" value="photoset" /><label for="tphotoset" id="lphotoset" title="Photoset ID">&nbsp;</label>
 		<span class="separator">&middot;</span>
 		<input type="radio" name="stype" id="tgroups" value="groups" /><label for="tgroups" id="lgroups" title="Group name from URL">&nbsp;</label>
+		<span class="separator">&middot;</span>
+		<input type="radio" name="stype" id="tfavorites" value="favorites" /><label for="tfavorites" id="lfavorites" title="Favorites of user screen name or NSID">&nbsp;</label>-->
 		<input type="text" name="q" id="searchbox" class="textbox" />
 		<span class="inputhint">Search</span>
 		<span class="searchtip"><span class="arrowtip"></span>Search for photos or click the user icon to browse by Screen name/ NSID</span>	
