Added cc-icons font, license details for photos and more info on the home page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="header">
-	<div class="logo">Flickr Browsr</div>
+	<a href="" class="logo">Flickr Browsr</a>
 	<form id="searchform" onSubmit="return false;">
 		<select name="stype1" class="typeselect" id="selecttype">
 			<option value="search" title="Search">Search</option>
@@ -41,7 +41,7 @@
 	<span id="statusbar"></span>
 	
 	<div id="footer">
-		<p>Designed by <a href="http://arrowconcept.com">Arrowconcept.com</a>. Powered by <a href="http://isotope.metafizzy.co/">Isotope</a>, <a href="http://www.shadowbox-js.com/">Shadowbox</a>. Flickr is a registered trademark of Yahoo Inc.</p>
+		<p>Designed by <a target="_blank" href="http://arrowconcept.com">Arrowconcept.com</a>. Powered by <a target="_blank" href="http://isotope.metafizzy.co/">Isotope</a>, <a target="_blank" href="http://www.shadowbox-js.com/">Shadowbox</a> &amp; the <a target="_blank" href="http://flickr.com/services/api">Flickr API</a>. Flickr is a registered trademark of Yahoo Inc.</p>
 	</div>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
