Added API browser, remaining home items.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<option value="gallery" title="Gallery URL">Gallery</option>
 			<option value="group" title="Groups URL">Group</option>
 			<option value="photoset" title="Photoset ID">Photoset</option>
+			<option value="api" title="API Method name">API</option>
 		</select>
 		<!--<input type="radio" name="stype" id="tsearch" value="search" checked="checked" /><label for="tsearch" id="lsearch" class="active" title="Search">&nbsp;</label>
 		<span class="separator">&middot;</span>
@@ -31,7 +32,7 @@
 		<input type="radio" name="stype" id="tfavorites" value="favorites" /><label for="tfavorites" id="lfavorites" title="Favorites of user screen name or NSID">&nbsp;</label>-->
 		<input type="text" name="q" id="searchbox" class="textbox" />
 		<span class="inputhint">Search</span>
-		<span class="searchtip"><span class="arrowtip"></span>Search for photos or click the user icon to browse by Screen name/ NSID</span>	
+		<span class="searchtip"><span class="arrowtip"></span>Search for photos or select the other options to browse Flickr</span>	
 	</form>
 	<div id="userinfo"></div>
 	<div class="clearfix"></div>
